Removed useless stuff and added new Item method